app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  background-color: #08090D;
  height: 100%;
  overflow: hidden;
}

body {
  background-color: #08090D;
  color: #ffffff;
  max-width: 430px;
  margin: 0 auto;
  height: 100%;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.scrollbar-hide::-webkit-scrollbar { display: none; }
.scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }

